# ba2

./: .env  .env.example  .gitignore  BARCODE SCANNER.lnk  barcodes_TRAY1_UC1.txt  barcodes_TRAY1_UC2.txt  barcodes_TRAY2_UC1.txt  barcodes_TRAY2_UC2.txt  barcodes_unknown.txt  config.json  main.py  main.spec  overtime.txt  pyproject.toml  pyproject_.toml  pytest.ini  requirements.txt
.github/workflows/: windows-build.yml
config/: constants.py  settings.py
scripts/: release.py  setup.ps1
src/: __init__.py  main.py  main.spec
src/config/: __init__.py  config.json  config_manager.py  constants.py  default_config.py  settings.py  version.py
src/services/: barcode_service.py  data_service.py  update_service.py
src/tests/: test_barcode_validation.py  test_data_sync.py  test_file_operations.py  test_ui_components.py
src/ui/: __init__.py  config_manager_window.py  main_window.py  parts_counter.py
src/ui/components/: __init__.py  barcode_entry.py  buttons.py  labels.py
tests/: __init__.py  test_barcode_validation.py  test_data_sync.py  test_file_operations.py  test_ui_components.py
